# investd

./: .env.template  .gitignore  .investd  .template.env  LICENSE.txt  Makefile  README.md  logging.yaml  pyproject.toml  requirements-dev.txt  requirements-latest.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  lint.yml  publish.yml  test.yml
investd/: __init__.py  __main__.py  app.py  common.py  components.py  config.py  errors.py  exceptions.py  metrics.py  misc.py  model.py  portfolio.py  quotes.py  transaction.py  transactions.py  views.py
investd/loaders/: __init__.py  base.py  revolut_currencies.py  revolut_stocks.py  xtb.py
investd/reports/: __init__.py  overview.html  overview.ipynb  overview.py
investd/source/: __init__.py  base.py  revolut_stocks.py  xtb.py
investd/sources/: __init__.py  base.py  bonds.py  bossa.py  revolut_currencies.py  revolut_stocks.py  xtb.py
sample_data/persist/: quotes.csv  transactions.csv  tx.csv
sample_data/source/revolut_stocks/: statement_sample.csv
sample_data/sources/revolut_stocks/: statement_sample.csv
sample_data/sources/xtb/: xStation5_samples_statement_01-01-2022--31-05-2022.xlsx
tests/: conftest.py  test_cli.py  test_metrics.py  test_quotes.py  test_reports.py  test_transaction.py  test_views.py
tests/resources/: .investd  .test.env
tests/resources/data/persist/: quotes.csv  transactions.csv  yfinance_quotes.csv
tests/resources/data/sources/: revolut-stocks-statement.csv
tests/resources/data/sources/bonds/: bonds-statement.xls
tests/resources/data/sources/bossa/: bossa-statement.csv
tests/resources/data/sources/revolut_stocks/: revolut-stocks-statement.csv
tests/resources/data/sources/test_source/: test.csv
tests/resources/data/sources/xtb/: xtb-statement.csv  xtb-statement.xlsx
tests/sources/: test_base.py  test_bonds.py  test_bossa.py  test_revolut_stocks.py  test_xtb.py
